# MyMC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  vcpkg-configuration.json  vcpkg.json
Docs/: NABCD.md  立项会议.md
Game/: CMakeLists.txt  imgui.ini  vcpkg.json
Game/docs/: Cube.md  vcpkg.md  zya.md
Game/docs/Design/: Page.md  issues.md  output.md
Game/docs/refs/: readme.md  versions.md
Game/examples/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  main.cc  vcpkg-configuration.json
Game/include/Culling/: AABB.hpp  Frustum.hpp
Game/include/GamePlay/: Player.hpp
Game/include/Header/: Header.hpp
Game/include/IO/: IOManager.hpp  IOStruct.hpp
Game/include/Log/: Logger.hpp
Game/include/Map/: Map.hpp
Game/include/Music/: SDL_mixer.h  boxil.h
Game/include/Physics/: Physics.hpp
Game/include/Render/: Camera.hpp  FrameBuffers.hpp  Mesh.hpp  Scene.hpp  Shader.hpp  mTexture.hpp
Game/include/UI/: Application.hpp
Game/shaders/fragment/: CubeCloud.fs  CubeMap.fs  CubeWater.fs  CubeWaterSSR.fs  Postprocess.fs  SelectedBlock.fs  SingleColor.fs  Sky.fs  Sun.fs  shadowMap.fs
Game/shaders/vertex/: CubeMap.vs  CubeMapWater.vs  Postprocess.vs  SelectedBlock.vs  Sky.vs  Sun.vs  border.vs  shadowMap.vs
Game/src/Culling/: AABB.cc  Frustum.cc
Game/src/GamePlay/: Player.cc
Game/src/IO/: IOManager.cc
Game/src/Log/: Logger.cc
Game/src/Map/: Map.cc
Game/src/Render/: Camera.cc  FrameBuffers.cc  Mesh.cc  Scene.cc  Shader.cc  Texture.cc  mTexture.cc
Game/src/UI/: Application.cc
Game/test/: main.cc
docs/: Cube.md  Design.md  Shader.md  issues.md  zya.md
include/: Application.hpp  Camera.hpp  Header.hpp  Mesh.hpp  Player.hpp  Scene.hpp  Shader.hpp  Texture.hpp
include/Header/: Header.hpp
include/Log/: Logger.hpp
include/Map/: Map.hpp
include/Render/: Buffer.hpp  Camera.hpp  Mesh.hpp  Scene.hpp  Shader.hpp  Texture.hpp  mTexture.hpp
shaders/fragment/: Cube.fs  CubeMap.fs  spark.fs
shaders/vertex/: CubeMap.vs  MVP.vs  Nothing.vs  spark.vs
src/: Application.cc  Camera.cc  Mesh.cc  Scene.cc  Shader.cc  Texture.cc
src/Log/: Logger.cc
src/Map/: Map.cc
src/Render/: Mesh.cc  Scene.cc  Shader.cc  Texture.cc
src/UI/: Application.cc
test/: main.cc
